--- a/styles/Video.module.css
+++ b/styles/Video.module.css
@@ -103,6 +103,7 @@
   font-size: 20px;
   font-weight: 500;
   padding-right: 10px;
+  cursor: pointer;
 }
 
 .colCommentsContainer {
@@ -145,4 +146,5 @@
   font-size: 20px;
   color: white;
   padding: 7px 30px;
+  cursor: pointer;
 }
